--- a/assets/style.css
+++ b/assets/style.css
@@ -9,12 +9,19 @@ h2 {
 }
 
 body {
+    padding: 1em;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-image: linear-gradient(355deg, #b9fdff 0, #84daff 25%, #3cb5f2 50%, #0091d7 75%, #0076FE 100%);;
+}
+
+small {
+    color: #DC3545;
+    font-weight: lighter;
+    display: none;
 }
 
 .btn {
