--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,11 @@ body {
     background-image: linear-gradient(355deg, #b9fdff 0, #84daff 25%, #3cb5f2 50%, #0091d7 75%, #0076FE 100%);;
 }
 
+.card {
+    width: 100%;
+    max-width: 30rem;
+}
+
 small {
     color: #DC3545;
     font-weight: lighter;
